# GlobalHack-DeliveryRadar

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr1.diff  pyproject.toml  tsconfig.json
.claude/agents/: clarity-info-design-reviewer.md  domain-soundness-reviewer.md  fact-checker.md  qa-engineer.md  review-panel.md  skeptical-judge.md
.github/workflows/: ci.yml  radar-capture.yml  radar-conformance.yml  radar.yml  release.yml
.superpowers/review/: cli-tests-report.md  code-fix-report.md  markers-report.md
artifacts/: baseline-review-opus.md  baseline-review.md  pr1-verdicts-sonnet.json  pr1-verdicts.json
dashboard/: data.js  index.html  slides.html
docs/adr/: ADR-0001-react-spa-showcase.md  ADR-0002-showcase-information-architecture.md  ADR-0003-typescript-implementation.md  ADR-0004-cicd-pipeline.md  ADR-0005-element-ids-testability.md  ADR-0006-platform-agnostic-core.md  (+4 more)
eval/: .verdict-cache.json  cases.yaml  eval-data.js  report.md  results.json
scripts/: baseline-review.ts  baseline_review.py  eval.ts  make-contrast.ts  make_contrast.py  probe-provider.ts  record-cassettes.ts
src/: checker.ts  cli.ts  comment.ts  extract.ts  index.ts  llm.ts  retrieve.ts
src/cli/: main.ts  (+3 more)
tests/: checker.test.ts  comment.test.ts  diff.test.ts  extract.test.ts  llm.test.ts  retrieve.test.ts  test_extract.py  test_retrieve.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+201 files in other folders)
