[project]
name = "delivery-radar"
version = "0.1.0"
description = "Delivery Radar — intent-implementation governance engine (hackathon slice)"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.60", "pyyaml>=6.0"]

[project.scripts]
radar = "radar.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
